<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.launch_details.LaunchDetailsFragment">




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/details_guideline_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />


    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toTopOf="@id/details_guideline_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:sliderAnimationDuration="600"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderScrollTimeInSec="1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="12dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_guideline_horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/description_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mission_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_title" />

            <TextView
                android:id="@+id/textview_mission_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mission_name"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintTop_toTopOf="@id/textview1" />

            <TextView
                android:id="@+id/textview2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/launch_date"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview1" />

            <TextView
                android:id="@+id/textview_launch_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/launch_date"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintTop_toTopOf="@id/textview2" />

            <TextView
                android:id="@+id/textview3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rocket_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview2" />

            <TextView
                android:id="@+id/textview_rocket_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rocket_name"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintTop_toTopOf="@id/textview3" />

            <TextView
                android:id="@+id/textview4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rocket_type"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview3" />

            <TextView
                android:id="@+id/textview_rocket_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rocket_type"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintTop_toTopOf="@id/textview4" />

            <TextView
                android:id="@+id/textview5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/successful_launch"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview4" />

            <ImageView
                android:id="@+id/imageview_successful_launch"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textview5" />

            <TextView
                android:id="@+id/textview6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ship_s"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview5" />

            <TextView
                android:id="@+id/textview_ships"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ship_s"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintTop_toTopOf="@id/textview6" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/textview_ships" />

            <TextView
                android:id="@+id/textview_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/starship_and_super_heavy_rocket_represent_a_fully_reusable_transportation_system_designed_to_service_all_earth_orbit_needs_as_well_as_the_moon_and_mars_this_two_stage_vehicle_composed_of_the_super_heavy_rocket_booster_and_starship_ship_will_eventually_replace_falcon_9_falcon_heavy_and_dragon"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view1" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>